lab-slack-solved

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -8,3 +8,334 @@ paragraph yellow: #ECB12F
 links blue: #2E71A6
 footer links grey: #454245
 */
+
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#nav-container{
+    background-color: #540B51;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 20px;
+}
+
+.logo-slack {
+    height: 25px;
+}
+
+.button-nav {
+    background-color: transparent;
+    border: none;
+    margin-left: 10px;
+}
+
+.nav-button-images {
+    height: 20px;
+}
+
+#header-container {
+    background-color: #540B51;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-intro-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 92%;
+ }
+
+ .intro {
+    text-align: center;
+    color: white;
+    font-size: 45px ;
+ }
+
+ .free-intro {
+    color: white;
+ }
+
+.free-intro-bold {
+    color: #ECB12F;
+    font-weight: bold;
+}
+
+.button-signup-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.button-signup-email {
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #540B51;
+    text-transform: uppercase;
+}
+
+.button-signup-google {
+    position: relative;
+    background-color: #4285F4;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+}
+
+.google-logo {
+    position: absolute;
+    background-color: white;
+    top: 5px;
+    left: 8px;
+    bottom: 5px;
+    height: 25px;
+    padding: 5px 8px;
+    border-radius: 3px;
+}
+
+.hero-image-container {
+    height: 400px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.hero-image {
+    width: 150%;
+    margin-left: -30px;
+
+}
+
+#main-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.partner-banner-container {
+    background-color: #F3EAE2;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
+.partner-title {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 16px;
+    margin-top: 50px;
+}
+
+.partner-logo-container {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    row-gap: 30px;
+    flex-wrap: wrap;
+    
+}
+
+.partner-logo {
+    height: 39px;
+}
+
+.partner-logo-small {
+    height: 50px;
+}
+
+#teams-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin-top: 50px;
+}
+
+.teams-title {
+    font-size: 30px;
+    color: #540B51;
+    text-align: center;
+    margin-bottom: 6px;
+}
+
+.teams-brag {
+    text-align: center;
+    font-weight: 500;
+    margin-top: 0px;
+}
+
+.teams-info-list {
+    text-align: center;
+    list-style: none;
+}
+
+.teams-info-list li {
+    width: 220px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.teams-info-percent {
+    font-size: 40px;
+    color: #540B51;
+    margin-bottom: 5px;
+}
+
+.teams-info {
+    margin-top: 0px;
+    margin-bottom: 40px;
+}
+
+.teams-info-number {
+    margin-bottom: 0px;
+}
+
+#tryforfree-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    background-color: #540B51;
+}
+
+.tryforfree-title {
+    text-align: center;
+    color: white;
+    font-size: 35px;
+}
+
+.tryforfree-button {
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #540B51;
+    text-transform: uppercase;
+    width: 92%;
+}
+
+.talktosales-button {
+    margin-top: 12px;
+    background-color: transparent;
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    width: 92%;
+}
+
+.divider-footer {
+    width: 92%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-color: rgba(0, 0, 0, 0.15);
+}
+
+.footer-info-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    list-style: none;
+    margin-left: -20px;
+}
+
+.footer-info-list li {
+    font-size: 14px;
+    font-weight: bold;
+
+}
+
+.footer-info-list-flex,
+.footer-info-list-flex-download {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer-info-list-flex-download {
+    color:  #2E71A6;
+}
+
+.footer-socials-list {
+    display: flex;
+    justify-content: flex-start;
+    gap: 115px;
+    margin-top: 30px;
+    margin-left: -20px;
+    width: 90%;
+    list-style: none;
+}
+
+.footer-copyrights {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    color: #454245;
+    width: 92%;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    #header-container {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        padding-bottom: 50px;
+
+    }
+
+    .header-intro-container {
+        margin-left: 20px;
+    }
+
+    .intro {
+        text-align: left;
+    }
+
+    .teams-info-list {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .teams-info-list p {
+        text-align: left;
+        width: 160px;
+    }
+
+    .tryforfree-button,
+    .talktosales-button {
+        width: 75%;
+    }
+
+    .footer-info-list {
+        flex-direction: row;
+    }
+}
